<resources>
    <string name="app_name" translatable="false">Kirim Pesan App</string>
    <string name="desc_welcome">For those of you who are lazy about typing numbers one by one, you can try using this feature. Just snap a photo in the application or take it from your cellphone gallery, after that you can copy the number or go directly to WhatsApp.</string>
    <string name="sign_up">Sign Up</string>
    <string name="signIn">sign In</string>
    <string name="username">Username</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login_by_google">Sign in with google</string>
    <string name="desc_signIn">Enter Your Account</string>
    <string name="desc_signUp">Create Your Account</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="menu">Menu</string>
    <string name="history">History</string>
    <string name="profile">Profile</string>
    <string name="desc_menu">For those of you who are lazy about typing numbers one by one, you can try using this feature. Just snap a photo in the application or take it from your cellphone gallery, after that you can copy the number or go directly to WhatsApp.</string>
    <string name="tiitle_photo">Take a Photo</string>
    <string name="tittle_galery">Choose Photo</string>
    <string name="delete">Delete</string>
    <string name="name" translatable="false">Jhon Doe</string>
    <string name="show_profile">Show Profile</string>
    <string name="help_support">Help &amp; Support</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="your_name">Your Name</string>
    <string name="your_email">Your Email</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="please_wait">Is Recognizing Text</string>
    <string name="please_wait_loading">Please Wait ~</string>
    <string name="regex1" translatable="false">\\+(\\d{2})?(\\d{10,12})</string>
    <string name="regex2" translatable="false">0?(\\d{9,12})</string>
    <string name="regex_3" translatable="false">0?(\\d{4})[-\\s]?(\\d{4})[-\\s]?(\\d{4})</string>
    <string name="regex_4" translatable="false">\\+(\\d{2})?[-\\s]?(\\d{3})[-\\s]?(\\d{4})[-\\s]?(\\d{4})</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure want to logout?</string>
    <string name="language">Language Setting</string>
    <string name="welcome_app">Kirim Pesan App</string>
    <string name="copy">Copied successfully</string>
    <string name="tittle_dialog">Please Wait</string>
    <string name="empty_history">Data not found</string>
    <string name="default_web_client_id">790546513312-e9crs5aukvgoano4geiqvo63nhlu2utu.apps.googleusercontent.com</string>
    <string name="sign_in_success">Sign In Succes</string>
    <string name="sign_in_failed">Sign In Failed</string>
    <string name="error_message">Username cannot be empty</string>
    <string name="profile_update">Profile updated successfully</string>
    <string name="profile_update_failed">The profile was not updated successfully</string>
    <string name="choose_image">Choose Image</string>
    <string name="change_password">Change Password</string>
    <string name="bug_report">Bug Report</string>
    <string name="send_email">Send Email</string>
    <string name="send_bug">Send Bug Report</string>
    <string name="desc_change_password">Enter the email associated with your account and we\'ll send you an email with instructions for resetting your password.</string>
    <string name="desc_bug_report">Report your problem related to your account or application and we will follow up regarding your current problem and fix the problem.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="email_sent">Email Sent</string>
    <string name="desc_report_bug">Bug Report</string>
    <string name="provide_feedback">Provide Feedback</string>
    <string name="feedback">Feedback</string>
    <string name="desc_feedback">Do you want to provide feedback to the developer?</string>
</resources>