<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.WelcomeActivity"
    android:id="@+id/cl_welcome">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="44dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/welcome_app"
            android:textSize="16sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:src="@drawable/mockupwelcomelight" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_marginTop="58dp"
            android:layout_marginEnd="45dp"
            android:text="@string/desc_welcome"
            android:textAlignment="center"
            android:textSize="12sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="28dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_up"
            android:textColor="@color/secondary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/white"
            android:text="@string/signIn"
            android:textColor="@color/secondary"
            app:strokeColor="@color/grey"
            app:strokeWidth="1dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in_dark"
            android:layout_width="148dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_weight="1"
            android:backgroundTint="@color/dark"
            android:text="@string/signIn"
            android:textColor="@color/white"
            android:visibility="gone"
            app:strokeColor="@color/primary"
            app:strokeWidth="1dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>