<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ChangePasswordActivity"
    android:background="@color/white"
    android:id="@+id/cl_change_password">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/mt_change_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:navigationIcon="@drawable/baseline_arrow_back_24"
        app:subtitle="@string/change_password" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:id="@+id/tv_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/forgot_password"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/desc_change_password"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_edittext"
            android:textColor="@color/black"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            app:hintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:startIconDrawable="@drawable/outline_email_24"
            app:startIconTint="@color/grey_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="none"
                android:paddingStart="48dp"
                android:textColorHint="@color/grey_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/send_email"
            android:textColor="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>