<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.BugReportActivity"
    android:background="@color/white"
    android:id="@+id/cl_bug_report">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_bug_report"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:subtitle="@string/bug_report" />

    </com.google.android.material.appbar.AppBarLayout>


    <LinearLayout
        android:id="@+id/change_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:foregroundGravity="center"
        android:orientation="vertical"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/desc_report_bug"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/desc_bug_report"
            android:textAlignment="center"
            android:textSize="14sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_bug_report"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:textColorHint="@color/grey_hint"
            app:endIconMode="clear_text"
            android:inputType="textMultiLine"
            android:scrollbars="vertical"
            app:counterEnabled="true"
            app:counterMaxLength="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email"
            app:startIconTint="@color/grey_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_bug_report"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:hint="@string/bug_report"
                android:maxLength="100"
                android:gravity="top"
                android:textColorHint="@color/grey_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_bug_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginTop="24sp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/primary"
            android:text="@string/send_bug"
            android:textColor="@color/secondary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>