<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.auth.SignUpActivity"
    android:background="@color/white"
    android:id="@+id/cl_signUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="43dp"
        android:layout_marginBottom="48dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp">

        <ImageView
            android:id="@+id/iv_back_sign_uo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_24"/>

        <TextView
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:text="@string/desc_signUp"
            android:textSize="22sp"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_username"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:boxBackgroundMode="none"
            app:endIconMode="clear_text"
            android:background="@drawable/rounded_edittext"
            app:startIconDrawable="@drawable/outline_person_24"
            app:startIconTint="@color/grey_hint"
            app:hintEnabled="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:paddingStart="48dp"
                android:hint="@string/username"
                android:textColorHint="@color/grey_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_email"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:endIconMode="clear_text"
            app:boxBackgroundMode="none"
            android:background="@drawable/rounded_edittext"
            app:startIconDrawable="@drawable/outline_email_24"
            app:startIconTint="@color/grey_hint"
            app:hintEnabled="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:paddingStart="48dp"
                android:hint="@string/email"
                android:textColorHint="@color/grey_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ti_password"
            style="@style/ThemeOverlay.Material3.AutoCompleteTextView.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="14dp"
            app:endIconMode="password_toggle"
            app:boxBackgroundMode="none"
            android:background="@drawable/rounded_edittext"
            app:startIconDrawable="@drawable/outline_lock_24"
            app:startIconTint="@color/grey_hint"
            app:hintEnabled="false"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:paddingStart="48dp"
                android:hint="@string/password"
                android:textColorHint="@color/grey_hint"
                android:textSize="14sp" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="28dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/primary"
            android:text="@string/sign_up"
            android:textColor="@color/secondary"
            tools:layout_editor_absoluteX="30dp"
            tools:layout_editor_absoluteY="683dp" />

        <FrameLayout
            android:id="@+id/btn_sign_up_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/bg_button_stroke">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center"
                android:gravity="center"
                tools:ignore="UseCompoundDrawables,UselessParent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/google_logo"
                    android:layout_marginStart="20dp"/>

                <TextView
                    android:id="@+id/tv_sign_in_google"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_by_google"
                    android:textColor="@color/grey_hint"
                    android:textSize="14sp"
                    android:textStyle="bold"
                    android:layout_marginStart="6dp"/>
            </LinearLayout>

        </FrameLayout>
    </LinearLayout>

    <include
        android:id="@+id/loading_view"
        layout="@layout/view_loading"
        android:visibility="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>