<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragment.MenuFragment"
    android:id="@+id/cl_menu"
    android:background="@color/white">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/menu"
            android:textAlignment="textStart"
            android:textStyle="bold"
            android:textSize="20sp"
            android:layout_marginTop="30dp"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp">

            <ImageView
                android:id="@+id/iv_info"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/head_menu_light"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_menu"
                android:layout_width="290dp"
                android:layout_height="wrap_content"
                android:text="@string/desc_menu"
                android:textAlignment="textStart"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_info"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/iv_info" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="24dp"
            android:padding="4dp">
            
            <androidx.cardview.widget.CardView
                android:id="@+id/cv_camera"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp"
                android:background="@drawable/bg_button_stroke">

                <FrameLayout
                    android:id="@+id/fl_camera"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_cardview" />

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/phone"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tiitle_photo"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="16dp"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_galery"
                android:layout_width="148dp"
                android:layout_height="148dp"
                android:layout_weight="1"
                app:cardCornerRadius="10dp"
                android:layout_marginStart="5dp"
                app:cardBackgroundColor="@color/transparent"
                app:cardElevation="0dp"
                android:background="@drawable/bg_button_stroke">

                <FrameLayout
                    android:id="@+id/fl_galery"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/bg_cardview"/>

                <ImageView
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:src="@drawable/gallery"
                    android:layout_gravity="center"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tittle_galery"
                    android:textAlignment="center"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:layout_gravity="bottom|center_horizontal"
                    android:layout_marginBottom="16dp"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>