<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.profile.settings.HelpSupportActivity"
    android:background="@color/white"
    android:id="@+id/cl_help_support">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/mt_help_support"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/baseline_arrow_back_24"
            app:subtitle="@string/help_support" />


        <LinearLayout
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:padding="4dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_change_password"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardElevation="0dp"
                android:backgroundTint="@color/primary"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:src="@drawable/lock_icon"
                    app:tint="@color/secondary" />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_weight="1"
                android:text="@string/change_password"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/iv_change_password"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_24"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bug_report"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:padding="4dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_bug_report"
                android:layout_width="40dp"
                android:layout_height="40dp"
                app:cardElevation="0dp"
                android:backgroundTint="@color/primary"
                app:cardCornerRadius="6dp">

                <ImageView
                    android:padding="2dp"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_gravity="center"
                    android:src="@drawable/outline_bug_report_24"
                    />

            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="20dp"
                android:text="@string/bug_report"
                android:layout_gravity="center"
                android:textSize="16sp"/>

            <ImageView
                android:id="@+id/iv_bug_report"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_forward_24"
                android:layout_gravity="center"
                android:layout_marginEnd="20dp"/>

        </LinearLayout>


    </com.google.android.material.appbar.AppBarLayout>



</androidx.constraintlayout.widget.ConstraintLayout>